; ModuleID = '/home/carl/AnghaBench/systemd/src/fsck/extr_fsck.c_percent.c'
source_filename = "/home/carl/AnghaBench/systemd/src/fsck/extr_fsck.c_percent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@percent.pass_table = internal constant [6 x i32] [i32 0, i32 70, i32 90, i32 92, i32 95, i32 100], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i32, i64, i64)* @percent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @percent(i32 %0, i64 %1, i64 %2) #0 {
  %4 = alloca double, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i32, i32* %5, align 4
  %9 = icmp sle i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  store double 0.000000e+00, double* %4, align 8
  br label %45

11:                                               ; preds = %3
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @ELEMENTSOF(i32* getelementptr inbounds ([6 x i32], [6 x i32]* @percent.pass_table, i64 0, i64 0))
  %14 = icmp uge i32 %12, %13
  br i1 %14, label %18, label %15

15:                                               ; preds = %11
  %16 = load i64, i64* %7, align 8
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %15, %11
  store double 1.000000e+02, double* %4, align 8
  br label %45

19:                                               ; preds = %15
  %20 = load i32, i32* %5, align 4
  %21 = sub nsw i32 %20, 1
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds [6 x i32], [6 x i32]* @percent.pass_table, i64 0, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = sitofp i32 %24 to double
  %26 = load i32, i32* %5, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds [6 x i32], [6 x i32]* @percent.pass_table, i64 0, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = sitofp i32 %29 to double
  %31 = load i32, i32* %5, align 4
  %32 = sub nsw i32 %31, 1
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds [6 x i32], [6 x i32]* @percent.pass_table, i64 0, i64 %33
  %35 = load i32, i32* %34, align 4
  %36 = sitofp i32 %35 to double
  %37 = fsub double %30, %36
  %38 = load i64, i64* %6, align 8
  %39 = uitofp i64 %38 to double
  %40 = fmul double %37, %39
  %41 = load i64, i64* %7, align 8
  %42 = uitofp i64 %41 to double
  %43 = fdiv double %40, %42
  %44 = fadd double %25, %43
  store double %44, double* %4, align 8
  br label %45

45:                                               ; preds = %19, %18, %10
  %46 = load double, double* %4, align 8
  ret double %46
}

declare dso_local i32 @ELEMENTSOF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
